--- a/style.css
+++ b/style.css
@@ -390,6 +390,20 @@ h2 {
 	opacity: 0.9;
 }
 
+.form-status {
+	margin: 2px 0 0;
+	font-size: 0.88rem;
+	min-height: 1.4em;
+}
+
+.form-status.success {
+	color: #c8ffd9;
+}
+
+.form-status.error {
+	color: #ffd9d9;
+}
+
 .site-footer {
 	border-top: 1px solid rgba(15, 28, 63, 0.08);
 	padding: 22px 0 36px;
